--- a/rover-mobile/index.html
+++ b/rover-mobile/index.html
@@ -6,7 +6,6 @@
 <meta name = viewport content = 'width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0' >
 </head>
 <body>
-<script src = http://cdnjs.cloudflare.com/ajax/libs/showdown/1.2.3/showdown.min.js ></script>
-<script src = readme-reader-r2.js ></script>
+<script src = http://jaanga.github.io/cookbook-html/templates/reader-iframes/readme-reader-iframes.js ></script>
 </body>
 </html>
