--- a/rover/dev/index.html
+++ b/rover/dev/index.html
@@ -7,7 +7,7 @@
 <body>
 <script>
 
-	window.location.href = '../moon-rover-64p-r1.html' + location.hash;
+	window.location.href = '../moon-rover-64p-r1-1.html' + location.hash;
 
 </script>
 </body>
