update moon rover x 2

--- a/rover/moon-rover-64p-r1-2.html
+++ b/rover/moon-rover-64p-r1-2.html
@@ -6,10 +6,9 @@
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
 <body>
-<script src=http://rawgit.com/mrdoob/three.js/r72/build/three.min.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/r72/examples/js/controls/OrbitControls.js ></script>
-<script src=http://rawgit.com/mrdoob/three.js/r72/examples/js/controls/FirstPersonControls.js  ></script>
-<script src=http://rawgit.com/mrdoob/three.js/r72/examples/js/libs/stats.min.js ></script>
+<script src=http://rawgit.com/mrdoob/three.js/dev/build/three.min.js ></script>
+<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/controls/OrbitControls.js ></script>
+<script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
 <script>
 
 // Enable the script to operate within an iframe, make URLs fixed - otherwise set to relative
@@ -85,9 +84,10 @@
 			'h2 { margin: 0; }' +
 			'#bars, #i { font-size: 24pt; text-decoration: none; }' +
 			'#bars { color: pink; } ' +
-// add moz
-			'input[type=range] { -webkit-appearance: none; background-color: silver; height:20px; width: 200px; } ' +
-			'input[type="range"]::-webkit-slider-thumb { -webkit-appearance: none; background-color: #888; height: 28px; opacity: 0.5; width: 10px; } ' +
+
+			'input[type=range] { -webkit-appearance: none; -moz-appearance: none; background-color: silver; height: 20px; width: 180px; } ' +
+			'input[type=range]::-moz-range-thumb { -moz-appearance: none; background-color: #888; width: 10px; } ' +
+			'input[type=range]::-webkit-slider-thumb { -webkit-appearance: none; background-color: #888; opacity: 0.5; height: 28px; width: 10px; } ' +
 		'';
 
 		hamburger = document.body.appendChild( document.createElement( 'div' ) );
