--- a/rover-mobile/moon-rover-mobile-r5-3.html
+++ b/rover-mobile/moon-rover-mobile-r5-3.html
@@ -310,7 +310,7 @@
 
 		for ( var i = 1, j = 0; i < vertices.length; i += 3, j += 4 ) {
 
-			vertices[ i ] = scl * map[ j ]; ;
+			vertices[ i ] = scl * map[ j ] ;
 
 		}
 
