--- a/rover/moon-rover-256p-multi-tile-r1.html
+++ b/rover/moon-rover-256p-multi-tile-r1.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang=en >
 <head>
-<title>Moon Rover 64P R1</title>
+<title>Moon Rover 256P R1</title>
 <meta charset=utf-8 />
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
@@ -17,18 +17,25 @@
 	var gazetteerFile = sourceFolder + 'gazetteer/moon-iau-nomenclature.csv';
 	var gazetteer;
 
-	var heightMapsFolder = sourceFolder + 'heightmaps/64p/'
-	var name = '/64p-';
+//	var heightMapsFolder = sourceFolder + 'heightmaps/256p/'
+	var heightMapsFolder = 'c:/temp/moon-heightmaps/256p/'
+	var name = '/64p';
 
 // Copernicus,Archetypal large complex crater,9.7N,20.1W
 	var latDefault = 9.7;
 	var lonDefault = -20.1;
 
+	var latDefault = 30;
+	var lonDefault = 10;
+
 	var heightmapWidth = 1024;
 	var heightmapHeight = 1024;
 
+	var widthDestination = 256;
+	var heightDestination = 256;
+
 	var scale = 1;
-	var scaleAdjust = 0.015;
+	var scaleAdjust = 0.065;
 	var scl = scale * scaleAdjust;
 
 	var placardYPosition = 100;
@@ -36,6 +43,16 @@
 	var selectedPlace = 1753;  // Copernicus
 
 	var minPlaceRadiusToDisplay = 50; // radius of feature as defined by the gazetteer
+
+
+	var tilesX = 34; //widthSource / widthDestination;
+	var tilesY = 18; //heightSource / heightDestination;
+
+	tileX = 30;
+	tileY = tilesY - 4;
+
+	var offset = 30;
+	var offsetY = tilesY - 4;
 
 	var count;
 	var centerX, centerZ;
@@ -49,7 +66,7 @@
 	function init() {
 
 		var css = document.body.appendChild( document.createElement('style') );
-		css.innerHTML = 'body { font: 12pt monospace; margin: 0; overflow: hidden; }' +
+		css.innerHTML = 'body { font: 12pt monospace; margin: 0; /* overflow: hidden; */ }' +
 			'h2 { margin: 0; }' +
 			'#bars, #i { font-size: 24pt; text-decoration: none; }' +
 			'#bars { color: pink; } ' +
@@ -74,7 +91,13 @@
 				'<button onclick=controls.reset(); >Zoom All</button> ' +
 //				'<button id=butZoomIn onclick="camera.position.set(centerX-halfMapWidth+50,heightMeshYPosition+300,centerZ-halfMapHeight+400);" >Zoom In</button>' +
 			'</p>' +
+
 			'<p>Heights: <input type=range min=0 max=2 step=0.05 value=1 onchange=scale=this.value;scl=scale*scaleAdjust;updateHeightMap(); /></p>' +
+			'<p><small>' +
+				'Use cursor keys to move around the moon<br>' +
+				'Roll = left | 1 finger<br>Zoom = scroll | 2 finger<br>Move = right | 3 finger' +
+			'</small></p>' +
+
 			'<div id=info ></div>' +
 		'';
 
@@ -103,8 +126,8 @@
 		scene.add( axisHelper );
 
 		heightmapCanvas = document.createElement( 'canvas' );
-//		document.body.appendChild( heightmapCanvas );
-//		heightmapCanvas.style.cssText = 'border: 5px red solid; position: absolute; top: 0; z-index: -50;';
+		document.body.appendChild( heightmapCanvas );
+		heightmapCanvas.style.cssText = 'border: 5px red solid; position: absolute; top: 0; z-index: -50;';
 		heightmapCanvas.width = heightmapWidth;
 		heightmapCanvas.height = heightmapHeight;
 		heightmapContext = heightmapCanvas.getContext( '2d' );
@@ -118,35 +141,59 @@
 //		heightMesh.position.y = heightMeshYPosition;
 		scene.add( heightMesh );
 
-		panes = [];
+		tile = document.createElement( 'img' );
 
-		for ( var x = 0; x < 4; x++ ) {
-
-			for ( var y = 0; y < 4; y++ ) {
-
-				pane = document.createElement( 'img' );
-				pane.crossOrigin = 'Anonymous';
-				pane.id = x + '-' + y;
-				pane.onload = function() { drawTile( this ) };
-				panes.push( pane );
-
-			}
-
-		} 
-
-		pt = latlon2xy( latDefault, lonDefault );
-
-		centerX = pt[ 0 ];
-		centerZ = pt[ 1 ];
-
-		updateHeightMap();
+		processTiles();
 
 	}
 
+	function processTiles() {
+
+//console.log( 'tx', tileX, 'ty', tileY, 's', tilesX, tilesY);
+
+		if ( tileY < tilesY && tileX < tilesX ) {
+
+			tileY++;
+
+			addImage( tileX, tileY - 1 );
+
+		} else if ( tileX < tilesX - 1 ) {
+
+			tileX++;
+			tileY = 0;
+
+			processTiles();
+
+		} else {
+
+console.log(  'end of story' );
+
+			updateTerrain();
+
+		}
+
+	}
+
+
+	function addImage( x, y ) {
+
+		tile.onload = function() {
+
+			heightmapContext.drawImage( tile, 0, 0, widthDestination, heightDestination, ( x - offset ) * widthDestination, ( y - offsetY ) * heightDestination, widthDestination, heightDestination ); 
+
+			processTiles();
+
+		}
+
+		tile.src =  'c:/temp/moon-heightmaps/256p/' + '+' + x + '/' + '256p+' + x + '+' + y + '.png';
+console.log( tile.src );
+	}
+
+
 	function latlon2xy( lat, lon ) {
 
-		cx = lon < 0 ? Math.floor( 90 + 90 * lon / 360 ) : Math.floor( 44 + 90 * lon / 360 );
-		cy = Math.floor( 23 - 45 * lat / 180 ) ;
+		cx = lon < 0 ? Math.floor( 90 + 90 * lon / 360 ) : Math.floor( 1 + 90 * lon / 360 );
+		cy = Math.floor( 22 - 45 * lat / 180 ) ;
 
 		return [ cx, cy ];
 
@@ -199,7 +246,7 @@
 
 		scene.add( heightMesh );
 
-		if ( gazetteer === undefined ) { getGazetteerMoon(); }
+//		if ( gazetteer === undefined ) { getGazetteerMoon(); }
 
 	}
 
@@ -261,6 +308,8 @@
 				centerZ = pt[ 1 ];
 
 				updateHeightMap();
+
+getCoordinates( place[ 2 ], place[ 3 ]  );
 
 //				centerX = nextPlace[ 2 ];
 //				centerZ = nextPlace[ 3 ];
