--- a/utilities/img-viewer-3d-moon-r2.html
+++ b/utilities/img-viewer-3d-moon-r2.html
@@ -24,12 +24,12 @@
 //	var fileName = '../../../data-samples/usgs-srtm1-2-1/N37W121.hgt';
 //	var fileName = 	'C:/temp/de-ferranti/P32/N60E006.hgt';
 //	var fileName = 	'C:/temp/LDEM_16.IMG';
-//	var fileName = 	'C:/temp/WAC_GLD100_E000N1800_004P.IMG';
+	var fileName = 	'C:/temp/moon-heightmaps/WAC_GLD100_E000N1800_004P.IMG';
 //	var fileName = 	'C:/temp/WAC_GLD100_E000N1800_008P.IMG';
 //	var fileName = 	'C:/temp/WAC_GLD100_E000N1800_016P.IMG';
 //	var fileName = 	'C:/temp/WAC_GLD100_E000N1800_032P.IMG';
 
-var fileName = 	'http://lroc.sese.asu.edu/data/LRO-L-LROC-5-RDR-V1.0/LROLRC_2001/DATA/SDP/WAC_GLD100/WAC_GLD100_E000N1800_004P.IMG';
+//var fileName = 	'http://lroc.sese.asu.edu/data/LRO-L-LROC-5-RDR-V1.0/LROLRC_2001/DATA/SDP/WAC_GLD100/WAC_GLD100_E000N1800_004P.IMG';
 
 	var width = 1440;
 	var height = 720;
