--- a/utilities/img-viewer-3d-moon.html
+++ b/utilities/img-viewer-3d-moon.html
@@ -26,14 +26,20 @@
 //	var fileName = 	'C:/temp/LDEM_16.IMG';
 //	var fileName = 	'C:/temp/WAC_GLD100_E000N1800_004P.IMG';
 //	var fileName = 	'C:/temp/WAC_GLD100_E000N1800_008P.IMG';
-	var fileName = 	'C:/temp/WAC_GLD100_E000N1800_016P.IMG';
-//	var fileName = 	'C:/temp/WAC_GLD100_E000N1800_032P.IMG';
+//	var fileName = 	'C:/temp/moon-heightmaps/WAC_GLD100_E000N1800_016P.IMG';
 
-	var width = 1440; // 4P
-	var height = 720;
 
-	var width = 1440 * 4;
-	var height = 720 * 4;
+
+
+//	var width = 1440; // 4P
+//	var height = 720;
+
+//	var width = 1440 * 4;
+//	var height = 720 * 4;
+
+	var fileName = 	'C:/temp/moon-heightmaps/WAC_GLD100_E000N1800_032P.IMG';
+	var width = 11520;
+	var height = 5760;
 
 	var xmlHttp;
 	var byteArray;
