--- a/rover-256p/moon-rover-256p-multi-tile-r1.html
+++ b/rover-256p/moon-rover-256p-multi-tile-r1.html
@@ -73,7 +73,7 @@
 	function init() {
 
 		var css = document.body.appendChild( document.createElement('style') );
-		css.innerHTML = 'body { font: 12pt monospace; margin: 0; /* overflow: hidden; */ }' +
+		css.innerHTML = 'body { font: 12pt monospace; margin: 0; overflow: hidden; }' +
 			'h2 { margin: 0; }' +
 			'#bars, #i { font-size: 24pt; text-decoration: none; }' +
 			'#bars { color: pink; } ' +
@@ -91,20 +91,21 @@
 		menu.style.cssText = ' background-color: #eee; border: 1px #ccc solid; left: -300px;  max-height: ' + ( window.innerHeight - 50 ) + 'px; ' +
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; width: 260px; ';
 		menu.innerHTML = '<h2 style=margin:0; ><a href="" >' + document.title + '</a> ' +
-			'<a id=i href=http://jaanga.github.io/moon/rover/ >&#x24D8;</a></h2>' +
+			'<a id=i href=http://jaanga.github.io/moon/rover-256p/ >&#x24D8;</a></h2>' +
 			'<p><select id=selPlace></select></p>' +
 			'<p>' +
 				'<button onclick=controls.reset(); >Zoom All</button> ' +
 //				'<button id=butZoomIn onclick="camera.position.set(centerX-halfMapWidth+50,heightMeshYPosition+300,centerZ-halfMapHeight+400);" >Zoom In</button>' +
 			'</p>' +
 
-			'<p>Heights: <input type=range min=0 max=2 step=0.05 value=1 onchange=scale=this.value;scl=scale*scaleAdjust;updateHeightMap(); /></p>' +
+			'<p>Heights: <input type=range min=0 max=2 step=0.05 value=1 onchange=scale=this.value;scl=scale*scaleAdjust;processTiles(); /></p>' +
 			'<p><small>' +
 				'Use cursor keys to rove the moon<br>' +
 				'Roll = left | 1 finger<br>Zoom = scroll | 2 finger<br>Move = right | 3 finger' +
 			'</small></p>' +
+			'<hr>' +
 			'<div id=info ></div>' +
-			'<p id=places></p>' +
+			'<p id=places>downloading gazetteer...</p>' +
 		'';
 
 		stats = new Stats();
@@ -273,23 +274,29 @@
 
 		function callbackGazetteer() {
 
-			if ( xmlHttp.readyState != 4  ) { return; }
+			if ( xmlHttp.readyState != 4  ) { 
+
+				places.innerHTML += '.';
+				return; 
+
+			}
 
 			var response = xmlHttp.responseText;
 
 			var lines = response.split(/\r\n|\n/);
 
-			gazetteer = [ ['select destination'] ];
+			gazetteer = [];
 
-			for ( var i = 0, place; i < lines.length; i++ ) {
+			for ( var i = 0; i < lines.length; i++ ) {
 
-				place = lines[i].split( ',' );
+				var place = lines[i].split( ',' );
 
-				gazetteer.push( [ place[0], parseFloat( place[ 1 ] ), parseFloat( place[ 2 ] ), parseFloat( place[ 3 ] ) ] );
+//				gazetteer.push( [ place[0], parseFloat( place[ 1 ] ), parseFloat( place[ 2 ] ), parseFloat( place[ 3 ] ) ] );
+				gazetteer.push( [ place[0], place[ 1 ], place[ 2 ], place[ 3 ] ] );
 
 			}
 
-			for ( var i = 0, place; i < lines.length; i++ ) {
+			for ( var i = 0; i < lines.length; i++ ) {
 
 				selPlace.appendChild( document.createElement( 'option' ) );
 				selPlace.children[ i ].text = gazetteer[ i  ][ 0 ];
@@ -302,8 +309,8 @@
 
 				var place = gazetteer[ this.selectedIndex ];
 
-				tileXStart = Math.floor( place[ 3 ] ) - 1;
-				tileYStart = Math.floor( place[ 2 ] ) - 1;
+				tileXStart = Math.floor( parseFloat( place[ 3 ] ) ) - 1;
+				tileYStart = Math.floor( parseFloat( place[ 2 ] ) ) - 1;
 
 				tileXFinish = tileXStart + tileXCount;
 				tileX = tileXStart;
@@ -334,15 +341,8 @@
 
 			if ( place[ 2 ] > tileYStart && place[ 2 ] < tileYFinish && place[ 3 ] > tileXStart && place[ 3 ] < tileXFinish ) {
 
-
-				difLon = place[ 3 ] - tileX;
-
-//console.log( place[ 3 ], tileX );
-
 				txt += place[ 0 ] + '<br>&bull; lat:' + place[ 2 ] + ' lon:' + place[ 3 ] + '<br>';
-
 				drawSprite( place[ 0 ], 0.25, 120, 256 * ( place[ 3 ] - tileX + 2 ), 300 , -256 * ( place[ 2 ] - tileY - 3 ) );
-
 
 			}
 
@@ -451,11 +451,11 @@
 
 		context.font = parameters.font ? parameters.font : '48px sans-serif';
 
-		var width = 0;
+//		var width = 0;
 
 		for (var i = 0, len = textArray.length; i < len; i++) {
 
-			width = context.measureText( textArray[i] ).width > width ? context.measureText( textArray[i] ).width : width;
+			var width = context.measureText( textArray[i] ).width > width ? context.measureText( textArray[i] ).width : width;
 
 		}
 
