--- a/rover-256p/moon-rover-256p-multi-tile-r1.html
+++ b/rover-256p/moon-rover-256p-multi-tile-r1.html
@@ -11,18 +11,10 @@
 <script src=http://rawgit.com/mrdoob/three.js/dev/examples/js/libs/stats.min.js ></script>
 <script>
 
-// Enable the script to operate within an iframe, make URLs fixed - otherwise set to relative
-	var sourceFolder = window.self === window.top ? '../' : 'http://jaanga.github.io/moon/';
-
-	var gazetteerFile = sourceFolder + 'gazetteer/moon-iau-nomenclature.csv';
-	var gazetteer;
-
-//	var heightMapsFolder = sourceFolder + 'heightmaps/256p/'
-	var heightMapsFolder = 'c:/temp/moon-heightmaps/256p/'
-
-//	var path = 'c:/temp/moon-heightmaps/';
 	var path = 'http://jaanga.github.io/';
 
+	var gazetteerFile = path + 'moon/gazetteer/moon-iau-nomenclature.csv';
+	var gazetteer;
 
 	var dirNE = 'moon-heightmaps-256p-ne/';
 	var dirNW = 'moon-heightmaps-256p-nw/';
@@ -48,10 +40,8 @@
 
 	var selectedPlace = 1753;  // Copernicus
 
-	var minPlaceRadiusToDisplay = 50; // radius of feature as defined by the gazetteer
-
-	tileXCount = heightmapWidth / widthDestination
-	tileYCount = heightmapWidth / widthDestination
+	var tileXCount = heightmapWidth / widthDestination
+	var tileYCount = heightmapWidth / widthDestination
 
 	var tileXStart = -22;
 	var tileXFinish = tileXStart + tileXCount;
@@ -61,8 +51,9 @@
 	var tileYFinish = tileYStart + tileYCount;
 	var tileY = tileYStart;
 
-	var count;
-	var centerX, centerZ;
+	var startTime = performance.now();
+	var delayTime = 2000;
+	var autoRotateSpeed = 0.2;
 
 	var css, menu, stats, renderer, scene, camera, controls;
 	var geometry, material, mesh;
@@ -99,6 +90,8 @@
 			'</p>' +
 
 			'<p>Heights: <input type=range min=0 max=2 step=0.05 value=1 onchange=scale=this.value;scl=scale*scaleAdjust;processTiles(); /></p>' +
+			'<p><input type=checkbox id=chkGradient onchange=toggleGradientBackground(); checked /> Display gradient</p>' +
+			'<p><input type=checkbox id=chkRotate checked /> Auto Rotation</p>' +
 			'<p><small>' +
 				'Use cursor keys to rove the moon<br>' +
 				'Roll = left | 1 finger<br>Zoom = scroll | 2 finger<br>Move = right | 3 finger' +
@@ -153,6 +146,8 @@
 
 		processTiles();
 
+		toggleGradientBackground();
+
 	}
 
 	function processTiles() {
@@ -172,12 +167,9 @@
 
 		} else {
 
-// console.log(  'end of story' );
-
 			updateTerrain();
 
 			info.innerHTML = 'lat: ' + tileYStart + ' to ' + tileYFinish + ' lon: ' + tileXStart + ' to ' + tileXFinish;
-//console.log( tile.src );
 
 		}
 
@@ -229,7 +221,6 @@
 		}
 
 		tile.src = path + dir + signEW + x + '/' + '256p' + signEW + x + signNS + y + '.png';
-//console.log( tile.src );
 
 	}
 
@@ -291,7 +282,6 @@
 
 				var place = lines[i].split( ',' );
 
-//				gazetteer.push( [ place[0], parseFloat( place[ 1 ] ), parseFloat( place[ 2 ] ), parseFloat( place[ 3 ] ) ] );
 				gazetteer.push( [ place[0], place[ 1 ], place[ 2 ], place[ 3 ] ] );
 
 			}
@@ -494,6 +484,28 @@
 
 	}
 
+	function toggleGradientBackground() {
+
+		if ( chkGradient.checked ) {
+
+			document.body.style.cssText += ' height: ' + window.innerHeight + 'px; ';
+
+			var col1 = Math.random().toString(16).slice(2, 8);
+			var col2 = Math.random().toString(16).slice(2, 8);
+			var col3 = Math.random().toString(16).slice(2, 8);
+			var x = ( Math.random() * window.innerWidth ).toFixed(0);
+			var y = ( Math.random() * window.innerHeight ).toFixed(0);
+
+			document.body.style.backgroundImage = 'radial-gradient( circle farthest-corner at ' + x + 'px ' + y + 'px, #' + col1 + ' 0%, #' + col2 + ' 50%, #' + col3 + ' 100%)';
+
+		} else {
+
+			document.body.style.backgroundImage = '';
+
+		}
+
+	}
+
 	function onWindowResize() {
 
 		camera.aspect = window.innerWidth / window.innerHeight;
@@ -505,7 +517,24 @@
 
 	function v( x, y, z){ return new THREE.Vector3( x, y, z ); }
 
-	function animate() {
+	function onMouseMove() {
+
+		startTime = chkRotate.checked ? performance.now() : 1000000 ;
+		controls.autoRotate = false;
+
+	}
+
+	function animate( timestamp ) {
+
+		if ( timestamp - startTime > delayTime && chkRotate.checked ) {
+
+			controls.autoRotate = true;
+
+		} else {
+
+			controls.autoRotate = false;
+
+		}
 
 		requestAnimationFrame( animate );
 		controls.update();
