update readme files

--- a/utilities/read-png-composite-r1.html
+++ b/utilities/read-png-composite-r1.html
@@ -10,7 +10,8 @@
 // source http://wms.lroc.asu.edu/lroc/view_rdr/WAC_GLD100
 
 
-	var path = 'c:/temp/moon-heightmaps/';
+//	var path = 'c:/temp/moon-heightmaps/'; // for developing etc
+	var path = 'http://jaanga.github.io/';
 
 	var dirNE = 'moon-heightmaps-256p-ne/';
 	var dirNW = 'moon-heightmaps-256p-nw/';
@@ -20,14 +21,14 @@
 	var widthSource = 256;
 	var sourceSource = 256;
 
-	pixels = 64;
-	var tileXCount = 20;
-	var tileXStart = -30;
+	pixels = 256;
+	var tileXCount = 10;
+	var tileXStart = -180;
 	var tileXFinish = tileXStart + tileXCount;
 	var tileX = tileXStart;
 
-	var tileYCount = 10;
-	var tileYStart = -19;
+	var tileYCount = 3;
+	var tileYStart = 1;
 	var tileYFinish = tileYStart - tileYCount;
 	var tileY = tileYStart;
 
@@ -51,6 +52,7 @@
 				'<a href="" >' + document.title + '</a> ' +
 				'<a id=i href=http://jaanga.github.io/ >&#x24D8;</a>' +
 			'</h2>' +
+			'<p>Use cursor keys to move about</p>' +
 			'<div id=info ></div>' +
 		'';
 
