--- a/voyager/altitude/dev/index.html
+++ b/voyager/altitude/dev/index.html
@@ -1,13 +1,13 @@
 <!doctype html >
 <html lang=en >
 <head>
-<title>moon rover mobile</title>
+<title>moon voyager altitude</title>
 <meta charset=utf-8 >
 </head>
 <body>
 <script>
 
-	window.location.href = '../moon-voyager-r2.html' + location.hash;
+	window.location.href = '../moon-voyager-altitude-r1.html' + location.hash;
 
 </script>
 </body>
