--- a/voyager/gamer/moon-voyager-gamer-r2.html
+++ b/voyager/gamer/moon-voyager-gamer-r2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang=en >
 <head>
-<title>Moon Voyager R2</title>
+<title>Moon Voyager Gamer R2</title>
 <meta charset=utf-8 />
 <meta name=viewport content='width=device-width,user-scalable=no,minimum-scale=1.0,maximum-scale=1.0' />
 </head>
