update voyager info links

--- a/voyager/gamer/moon-voyager-gamer-r2.html
+++ b/voyager/gamer/moon-voyager-gamer-r2.html
@@ -77,7 +77,7 @@
 			'opacity: 0.8; overflow: auto; padding: 0 10px; position: absolute; top: 0px; transition: left 1s; max-width: 200px; ';
 		menu.innerHTML = '<h3>' +
 				'<a href="" >' + document.title + '</a> ' +
-				'<a id=i href=http://jaanga.github.io/moon/voyager/ >&#x24D8;</a>' +
+				'<a id=i href=http://jaanga.github.io/moon/voyager/gamer/ >&#x24D8;</a>' +
 			'</h3>' +
 			'<p><select id=selPlace></select></p>' +
 			'<p id=message ></p>' +
