--- a/voyager/image-map/moon-voyager-image-map-r1-1.html
+++ b/voyager/image-map/moon-voyager-image-map-r1-1.html
@@ -135,7 +135,7 @@
 
 		}
 
-//		texture = THREE.ImageUtils.loadTexture( "../../images/moon_8k_color_brim16_4096x2048.jpg" );
+//		texture = THREE.ImageUtils.loadTexture( '../../images/moon_8k_color_brim16_4096x2048.jpg' );
 //		texture = THREE.ImageUtils.loadTexture( '../../images/LDEM_16.jpg' );
 //		texture = THREE.ImageUtils.loadTexture( '../../images/PIA17037_hires.jpg' );
 
